--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./about">About</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./foto">Foto</a>
+          </li>
         </ul>
 
       </div>
